--- a/blocked.html
+++ b/blocked.html
@@ -14,5 +14,7 @@
         <h1>Don't get distracted now...</h1>
         <p>🤨</p>
     </div>
+    <p id="blocked-url" style="font-size: 20px"></p>
+    <script src="blockpage_script.js"></script>
 </body>
 </html>
