Added customizable block message

--- a/blocked.html
+++ b/blocked.html
@@ -10,11 +10,12 @@
     <div class="title-container">
         <h1>SessionBlock</h1>
     </div>
-    <div class="block-message-container">
-        <h1>Don't get distracted now...</h1>
-        <p>🤨</p>
+    <div id="block-message-container">
+        <h1 id="blockpage-message-text"></h1>
+        <p id="blockpage-emoji-text"></p>
     </div>
     <p id="blocked-url" style="font-size: 20px"></p>
+
     <script src="blockpage_script.js"></script>
 </body>
 </html>
