--- a/popup.html
+++ b/popup.html
@@ -76,6 +76,12 @@
         <h1>Allowed URL's</h1><button type="button" class="close-modal-button" id="close-allowed-urls-button">X</button>
         <textarea class="list-input" type="text" id="allowed-urls-input" placeholder="Each website much be separated with a new line and must be the full link. For example:&#13;&#10;https://www.example.com/path&#13;&#10;https://www.youtube.com/watch?v=dQw4w9WgXcQ"></textarea>
       </dialog>
+      <button type="button" id="blockpage-message-button">Blockpage Message ></button>
+      <dialog id="blockpage-message-modal" class="modal">
+        <h1>Blockpage Message</h1><button type="button" class="close-modal-button" id="close-blockpage-message-button">X</button>
+        <textarea class="list-input" type="text" id="blockpage-message-input" placeholder="Enter your custom blockpage message"></textarea>
+        <textarea class="list-input" type="text" id="blockpage-emoji-input" placeholder="Enter an emoji 🙂"></textarea>
+      </dialog>
     </form>
   </div>
 
